--- a/ProjectSuatuHari/LearningCheckpoint/LearningCheckPointStoryboard.storyboard
+++ b/ProjectSuatuHari/LearningCheckpoint/LearningCheckPointStoryboard.storyboard
@@ -35,10 +35,10 @@
                                         <rect key="frame" x="138" y="12.5" width="267" height="39"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="32"/>
-                                        <nil key="textColor"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star off" translatesAutoresizingMaskIntoConstraints="NO" id="x91-O8-UBv">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" translatesAutoresizingMaskIntoConstraints="NO" id="x91-O8-UBv">
                                         <rect key="frame" x="32" y="9" width="45" height="45"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="45" id="eNS-mm-nRC"/>
@@ -46,7 +46,7 @@
                                         </constraints>
                                     </imageView>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
+                                <color key="backgroundColor" red="0.34320026640000001" green="0.33709335330000001" blue="0.83913403750000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="64" id="8Np-Pb-WU4"/>
                                     <constraint firstItem="x91-O8-UBv" firstAttribute="leading" secondItem="PfK-nu-Twp" secondAttribute="leading" constant="32" id="YgA-dd-hWm"/>
@@ -158,7 +158,7 @@
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="Edit Here.." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="PQr-co-3gv">
                                         <rect key="frame" x="22" y="18" width="430" height="153"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="textColor" systemColor="labelColor"/>
+                                        <color key="textColor" systemColor="systemGray2Color"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences" autocorrectionType="no" spellCheckingType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
                                     </textView>
@@ -237,10 +237,10 @@
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ELl-k1-6yP">
                                                     <rect key="frame" x="0.0" y="237" width="433" height="293"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="6" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qze-50-x50">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="6" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qze-50-x50">
                                                             <rect key="frame" x="32" y="32" width="369" height="229"/>
                                                             <string key="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla nec urna ex. Aliquam interdum ullamcorper velit quis dapibus. Proin quis maximus felis. In tristique commodo velit, quis condimentum nisl tristique sodales. </string>
-                                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
@@ -334,6 +334,7 @@
                         <outlet property="ParameterTigaText" destination="PGS-eX-LRQ" id="McY-cd-AxB"/>
                         <outlet property="StoryBackground" destination="fgh-DQ-y24" id="6vb-oY-WQ8"/>
                         <outlet property="StoryText" destination="O8m-Hd-Og2" id="Zr4-SM-rQB"/>
+                        <outlet property="SubmitButton" destination="YIZ-UP-IVG" id="ZHu-Ah-19p"/>
                         <outlet property="reviewCollectionView" destination="0DQ-2L-N3x" id="ILA-Mm-pm7"/>
                     </connections>
                 </viewController>
@@ -347,16 +348,12 @@
         <image name="chevron.compact.right" catalog="system" width="64" height="128"/>
         <image name="leftarrow" width="65" height="57"/>
         <image name="star" width="89" height="86"/>
-        <image name="star off" width="23.5" height="22.5"/>
         <image name="trash" catalog="system" width="121" height="128"/>
-        <systemColor name="labelColor">
-            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="opaqueSeparatorColor">
-            <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray2Color">
+            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemIndigoColor">
             <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
