--- a/ProjectSuatuHari/Parental Control/ParentalControl_Storyboard.storyboard
+++ b/ProjectSuatuHari/Parental Control/ParentalControl_Storyboard.storyboard
@@ -510,7 +510,7 @@
     <inferredMetricsTieBreakers>
         <segue reference="2Sr-dx-Ozc"/>
         <segue reference="HaV-g9-jmm"/>
-        <segue reference="5t1-df-CKO"/>
+        <segue reference="WlS-Uj-oDb"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="bayi" width="392" height="398"/>
